# psxemulation

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
Notes001/: CMakeLists.txt  README.md  cpu_core.cpp  cpu_core_tests.cpp  main.cpp
Notes002/: CMakeLists.txt  README.md  cpu_core.cpp  cpu_core_tests.cpp  interrupt_controller.h  main.cpp
Notes003/: CMakeLists.txt  README.md  cpu_core.cpp  cpu_core.h  memory_controller.cpp  memory_controller.h  memory_controller_tests.cpp
Notes004/: CMakeLists.txt  README.md  cpu_core.cpp  cpu_core.h  memory_controller.cpp  memory_controller_tests.cpp
Notes005/: CMakeLists.txt  README.md  cpu_core.cpp  cpu_interrupt_controller_tests.cpp  cpu_memory_controller_and_cache_tests.cpp  interrupt_controller.cpp  interrupt_controller.h  interrupt_controller_tests.cpp
Notes006/: CMakeLists.txt  cpu_interrupt_controller_tests.cpp  hardware_interrupts_test.cpp  interrupt_controller.cpp  memory_controller.cpp  memory_controller.h
